[gd_scene load_steps=2 format=3 uid="uid://clkpiwbww0pqq"]

[ext_resource type="Script" uid="uid://tgm0saiwk7ug" path="res://windows/newListWindow/NewListWindow.gd" id="1_jrbmh"]

[node name="NewListWindow" type="Window"]
oversampling_override = 1.0
title = "Nova lista"
initial_position = 2
size = Vector2i(800, 600)
visible = false
exclusive = true
force_native = true
script = ExtResource("1_jrbmh")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
oversampling_override = 1.0
title = "Aviso!"
force_native = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleRichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 26
text = "Nova lista"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NameContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/NameContainer/HBoxContainer"]
layout_mode = 2
text = "Nome:"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/NameContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Nome da lista"
clear_button_enabled = true

[node name="BackgroundColor" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BackgroundColor"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/BackgroundColor/HBoxContainer"]
layout_mode = 2
text = "Cor do fundo:"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackgroundColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/BackgroundColor/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="ForegroundColor" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ForegroundColor"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ForegroundColor/HBoxContainer"]
layout_mode = 2
text = "Cor do texto:"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ForegroundColorPickerButton" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/ForegroundColor/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="TagButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EditTagButton" type="Button" parent="MarginContainer/VBoxContainer/TagButtonContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
text = "Editar tags"

[node name="ResultListContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ResultListContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 22
text = "Resultado:"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ListResult" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ListResult"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ListResult/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ListColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/ListResult/ScrollContainer/MarginContainer"]
layout_mode = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ListResult/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ListRichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ListResult/ScrollContainer/MarginContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="ResultTagsContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ResultTagsContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 22
text = "Tags:"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="TagsResult" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TagsResult"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TagsResult/MarginContainer"]
layout_mode = 2

[node name="TagsFlowContainer" type="FlowContainer" parent="MarginContainer/VBoxContainer/TagsResult/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EraseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(1, 0.4117647, 0.4117647, 1)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Apagar"

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
mouse_default_cursor_shape = 2
disabled = true
text = "Criar"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/NameContainer/HBoxContainer/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/BackgroundColor/HBoxContainer/BackgroundColorPickerButton" to="." method="_on_background_color_picker_button_color_changed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/ForegroundColor/HBoxContainer/ForegroundColorPickerButton" to="." method="_on_foreground_color_picker_button_color_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TagButtonContainer/EditTagButton" to="." method="_on_edit_tag_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/EraseButton" to="." method="_on_erase_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
